@@ -1,5 +1,8 @@
 Revision history for XML-Grammar-Fiction.
 
+        - In the Build.PL - merged 'test_requires' into 'build_requires'. 
+        Turns out that 'test_requires' is a Module::Installism.
+
 0.1.1       Tue Apr 27 10:11:00 IDT 2010
         - Made sure XML-Grammar-Screenplay used
         XML::Grammar::Fiction::ConfigData instead of 
